# eva

./: .gitignore  404.html  CLAUDE.md  CMakeLists.txt  README.md  README_en.md  index.html  sitemap.xml
.github/workflows/: tests.yml  win7-build.yml  windows-package.yml
cmake/: PostBuild.cmake  Targets.cmake
docs/: 功能迭代.md  机体架构设计.md  软件功能实现路径总览.md
docs/superpowers/plans/: 2026-04-08-frontend-redesign.md
docs/superpowers/specs/: 2026-04-08-frontend-redesign-design.md  2026-04-10-windows-package-design.md
openspec/changes/decouple-eva-runtime/: design.md  proposal.md  runtime-field-map.md  smoke-7.2.md  tasks.md
openspec/changes/rework-acp-web-console/: design.md  proposal.md  tasks.md
pages/01-对话/: index.html
pages/02-补完/: index.html
pages/03-语音交互/: index.html
pages/04-视觉交互/: index.html
pages/05-文生图/: index.html
pages/06-知识库/: index.html
pages/07-MCP/: index.html
pages/08-系统工程师/: index.html
pages/09-使用沙盒/: index.html
pages/10-使用技能/: index.html
pages/11-系统架构师/: index.html
pages/12-机体控制/: index.html
pages/13-桌面控制器/: index.html
resource/: res_acp_web.qrc  res_core.qrc
resource/QSS/: theme_modern_light.qss  theme_modern_light_legacy.qss
resource/acp_web/: app.js  index.html  styles.css
scripts/: smoke_acp_runtime.py
search/: search_index.json
src/: acp_bridge_client.cpp  acp_bridge_client.h  acp_http_server.cpp  acp_http_server.h  acp_main.cpp  acp_runtime.cpp  acp_runtime.h  main.cpp  xconfig.h
src/core/session/: session_controller.cpp  session_controller.h  session_frontend_port.h  session_host_port.h
src/core/toolflow/: tool_flow_controller.cpp  tool_flow_controller.h  tool_flow_host_port.h
src/net/: controlchannel.cpp  controlchannel.h
src/runtime/: eva_runtime.cpp  eva_runtime.h  runtime_bootstrap.cpp  runtime_bootstrap.h  runtime_commands.h  runtime_events.h  runtime_network_driver.h  runtime_state.h  runtime_tool_driver.h  runtime_worker_host.cpp  runtime_worker_host.h
src/service/backend/: backend_coordinator.cpp  backend_coordinator.h  backend_coordinator_port.h  backend_coordinator_widget_port.cpp  (+1 more)
src/widget/: app_shell.cpp  app_shell.h  app_shell.ui  chat_workspace_page.cpp  chat_workspace_page.h  chat_workspace_page.ui  context_drawer.cpp  context_drawer.h  context_drawer.ui  engineer_workspace_page.cpp  engineer_workspace_page.h  engineer_workspace_page.ui  knowledge_workspace_page.cpp  knowledge_workspace_page.h  knowledge_workspace_page.ui  media_workspace_page.cpp  media_workspace_page.h  media_workspace_page.ui  settings_workspace_page.cpp  settings_workspace_page.h  settings_workspace_page.ui  theme_tokens.h  ui_theme_tokens.h  widget.cpp  widget.h  widget_backend.cpp  widget_date.cpp  widget_documents.cpp  widget_engineer.cpp  widget_funcs.cpp  widget_link.cpp  widget_media.cpp  widget_output.cpp  widget_records.cpp  widget_runtime.cpp  widget_scheduler.cpp  widget_session.cpp  widget_settings.cpp  widget_skills.cpp  widget_slots.cpp  (+2 more)
tests/unit/: CMakeLists.txt
tests/unit/widget/: CMakeLists.txt  app_shell_tests.cpp  ui_theme_tokens_tests.cpp
使用说明书/: index.html
功能迭代/: index.html
文档解析/: index.html
机体持久化方案/: index.html
机体架构设计/: index.html
机体模块拆分与迁移/: index.html
机体节点与状态梳理/: index.html
系统优化方案/: index.html
软件技术说明书/: index.html
(+7 files in other folders)
